--- a/src/components/player/player.template.html
+++ b/src/components/player/player.template.html
@@ -1,4 +1,4 @@
-<div class="player">
+<div class="{{class.join(' ')}}" (click)="clicked()">
     <h4>{{player.tag}}</h4>
     <p>Tier: {{player.tier}}, Rank: {{player.rank}}</p>
 </div>
