--- a/src/components/app/app.styles.scss
+++ b/src/components/app/app.styles.scss
@@ -2,3 +2,14 @@ h1{
   padding: 10px;
   text-align: center;
 }
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+html body{
+  font-family: Helvetica, sans-serif;
+  background-color: #333;
+  color: #CCC;
+}
