--- a/src/components/player/player.style.scss
+++ b/src/components/player/player.style.scss
@@ -4,9 +4,15 @@
   grid-template-rows: 1fr;
   grid-template-areas: 'tag tier';
 
+  &.selectable{
+      cursor: pointer;
+  }
+  &.selected{
+      background-color: #222222;
+  }
+
   > *{
     padding: 5px;
-    font-size: 16px;
   }
 
   h4{
