WIP: Started adding basic security. Still to do: save token into cookies then read token from cookies when updating tables

--- a/src/components/player-list/player-list.template.html
+++ b/src/components/player-list/player-list.template.html
@@ -4,3 +4,8 @@
     [player]="player"
     (click)=select(player.id)>
 </player>
+
+<div class='links'>
+    <a routerLink='/add_player'>Register New Player</a><br />
+    <a routerLink='/tiers'>Tier Descriptions</a>
+</div>
