--- a/src/components/app/app.styles.scss
+++ b/src/components/app/app.styles.scss
@@ -1,3 +1,5 @@
+$link-color: #CC3333;
+
 h1{
   padding: 10px;
   text-align: center;
@@ -12,4 +14,14 @@ html body{
   font-family: Helvetica, sans-serif;
   background-color: #333;
   color: #CCC;
+}
+
+a{
+    color: $link-color;
+    padding: 0 3px;
+    text-decoration: none;
+    &:hover{
+        color: white;
+        background-color: $link-color;
+    }
 }
