Implemented token storage in auth.service, TODO: clean up how tokens persist and expire, refresh token lifecycle on use, store token as cookie for direct navigation

--- a/src/components/log-in/log-in.template.html
+++ b/src/components/log-in/log-in.template.html
@@ -1,4 +1,6 @@
 <form (submit)="attemptLogin()">
     <label for="password">Password:</label>
     <input type="password" name="password" [(ngModel)]="password" />
+    <input type="submit" value="Log In" />
 </form>
+<div *ngIf="failed">Sorry, that's the wrong password.</div>
