--- a/src/components/player-list/player-list.template.html
+++ b/src/components/player-list/player-list.template.html
@@ -1,11 +1,13 @@
 <player
     *ngFor="let player of list"
-    [selectable]="true"
+    [selectable]="loggedIn"
     [player]="player"
     (click)=select(player.id)>
 </player>
 
 <div class='links'>
-    <a routerLink='/add_player'>Register New Player</a><br />
-    <a routerLink='/tiers'>Tier Descriptions</a>
+    <p *ngIf="!loggedIn"><a routerLink='/login'>Log In</a></p>
+    <p *ngIf="loggedIn"><a routerLink='/add_player'>Register New Player</a></p>
+    <p><a (click)="logToken()">Log Token</a></p>
+    <p><a routerLink='/tiers'>Tier Descriptions</a></p>
 </div>
