Added colours to player components, handle player losses

--- a/src/components/log-in/log-in.template.html
+++ b/src/components/log-in/log-in.template.html
@@ -1,4 +1,5 @@
 <form (submit)="attemptLogin()">
+    <h3>Log In to Report Matches, etc.</h3>
     <label for="password">Password:</label>
     <input type="password" name="password" [(ngModel)]="password" />
     <input type="submit" value="Log In" />
