--- a/src/components/add-player/add-player.template.html
+++ b/src/components/add-player/add-player.template.html
@@ -1,4 +1,5 @@
 <form (submit)='addPlayer()'>
+    <h3>Register New Player</h3>
     <label for='tag'>Tag:</label> <input type='text' name='tag' [(ngModel)]='tag' />
     <input type='submit' value='Add' />
 </form>
