--- a/src/components/player/player.style.css
+++ b/src/components/player/player.style.css
@@ -3,9 +3,12 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   grid-template-areas: 'tag tier'; }
+  .player.selectable {
+    cursor: pointer; }
+  .player.selected {
+    background-color: #222222; }
   .player > * {
-    padding: 5px;
-    font-size: 16px; }
+    padding: 5px; }
   .player h4 {
     text-align: right;
     grid-area: tag; }
