--- a/src/components/player/player.template.html
+++ b/src/components/player/player.template.html
@@ -1,4 +1,4 @@
-<div class="{{class.join(' ')}}" (click)="clicked()">
+<div class="{{cssClass.join(' ')}}" (click)="clicked()">
     <h4>{{player.tag}}</h4>
-    <p>{{player.tierName}} {{player.rank}}/{{player.maxRank}}</p>
+    <p [ngStyle]="{ color: player.tierColor }">{{player.tierName}} {{player.rank}}/{{player.maxRank}}</p>
 </div>
