--- a/src/components/app/app.styles.css
+++ b/src/components/app/app.styles.css
@@ -1,5 +1,22 @@
-h1 {
+h1, h3 {
   padding: 10px;
   text-align: center; }
+
+* {
+  margin: 0px;
+  padding: 0px; }
+
+html body {
+  font-family: Helvetica, sans-serif;
+  background-color: #333;
+  color: #CCC; }
+
+a {
+  color: #CC3333;
+  padding: 0 3px;
+  text-decoration: none; }
+  a:hover {
+    color: white;
+    background-color: #CC3333; }
 
 /*# sourceMappingURL=app.styles.css.map */
