--- a/src/components/match-report/match-report.style.css
+++ b/src/components/match-report/match-report.style.css
@@ -1,3 +1,30 @@
-
+.wrapper {
+  display: grid;
+  width: 70%;
+  margin: 0 auto;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 50px 50px 50px;
+  grid-template-areas: "p1info p1score" "p2info p2score" "submit submit" "cancel cancel";
+  align-items: center; }
+  .wrapper * {
+    font-size: 30px; }
+  .wrapper .player1Score {
+    grid-area: p1score; }
+  .wrapper .player2Score {
+    grid-area: p2score; }
+  .wrapper .player1 {
+    grid-area: p1info; }
+  .wrapper .player2 {
+    grid-area: p2info; }
+  .wrapper button {
+    grid-area: submit;
+    width: 160px;
+    margin: 0 auto;
+    padding: 5px; }
+  .wrapper p {
+    grid-area: cancel;
+    text-align: center; }
+    .wrapper p a {
+      font-size: 16px; }
 
 /*# sourceMappingURL=match-report.style.css.map */
