Changed some styling, added download to export, pretty much ready now! only thin is recalculating ranks using only certain events, as well as tagging events and calculating by tag (allows for parallel ladders on the same app)

--- a/src/components/app/app.styles.css
+++ b/src/components/app/app.styles.css
@@ -17,6 +17,7 @@ a {
   text-decoration: none; }
   a:hover {
     color: white;
-    background-color: #CC3333; }
+    background-color: #CC3333;
+    cursor: pointer; }
 
 /*# sourceMappingURL=app.styles.css.map */
