--- a/src/components/match-report/match-report.style.scss
+++ b/src/components/match-report/match-report.style.scss
@@ -7,15 +7,22 @@
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 50px 50px 50px;
     grid-template-areas:
+        "title  title  "
         "p1info p1score"
         "p2info p2score"
-        "submit submit"
-        "cancel cancel";
+        "submit submit "
+        "cancel cancel ";
 
     align-items: center;
 
     *{
-        font-size: 30px;
+        font-size: 20px;
+    }
+    
+    h3{
+        grid-area: title;
+        text-align: center;
+        font-size: 25px;
     }
 
     .player1Score{
