--- a/src/components/event-manager/event-manager.style.css
+++ b/src/components/event-manager/event-manager.style.css
@@ -1,10 +1,19 @@
 div {
-  width: 60%;
+  width: 500px;
   margin: 0 auto; }
+
+form {
+  text-align: center; }
 
 ul {
   padding-left: 30px; }
   ul li {
     margin: 5px 0; }
+
+.selected {
+  border: 1px solid #CC3333;
+  padding: 5px; }
+  :not(.selected) {
+    padding: 6px; }
 
 /*# sourceMappingURL=event-manager.style.css.map */
