--- a/src/components/event-manager/event-manager.template.html
+++ b/src/components/event-manager/event-manager.template.html
@@ -5,9 +5,10 @@
     <h1>Events:</h1>
     <p>Select an event to use:</p>
     <ul>
-        <li *ngFor="let event of events">
-            {{event.id === selected ? '->' : ''}}
-            <a (click)="select(event.id)">{{event.name}}</a>
+        <li *ngFor="let event of events" [ngClass]="{
+            'selected': event.id === selected
+        }">
+            <a (click)="select(event.id)">{{event.name}}</a> ||
             <a (click)="exportEvent(event.id)">Export for QwertyStats</a>
         </li>
     </ul>
