--- a/src/components/player-list/player-list.style.css
+++ b/src/components/player-list/player-list.style.css
@@ -1,3 +1,7 @@
-
+.links {
+  text-align: center;
+  margin: 20px 0 0; }
+  .links p {
+    margin: 5px 0; }
 
 /*# sourceMappingURL=player-list.style.css.map */
