Moved over to postgres database rather than json text files

--- a/src/components/view-tiers/view-tiers.template.html
+++ b/src/components/view-tiers/view-tiers.template.html
@@ -1,7 +1,7 @@
 <div *ngFor="let tier of tiers" class='tier'>
     <h2>{{tier.name}}</h2>
     <h3>Rank required for next tier: {{tier.ranks === -1 ? 'Endlesss Tier' : tier.ranks}}</h3>
-    <p>{{tier.desc}}</p>
+    <p>{{tier.description}}</p>
 </div>
 <div>
     <a routerLink='/players'>Back</a>
