--- a/src/components/event-manager/event-manager.template.html
+++ b/src/components/event-manager/event-manager.template.html
@@ -9,7 +9,7 @@
             'selected': event.id === selected
         }">
             <a (click)="select(event.id)">{{event.name}}</a> ||
-            <span>{{event.tags.join(', ')}}</span> ||
+            <span>{{event.tags}}</span> ||
             <a (click)="exportEvent(event.id)">Export for QwertyStats</a>
         </li>
     </ul>
