--- a/src/components/player-list/player-list.template.html
+++ b/src/components/player-list/player-list.template.html
@@ -8,8 +8,9 @@
 <div class='links'>
     <div *ngIf="loggedIn">
         <p><a routerLink='/add_player'>Register New Player</a></p>
-        <p><a routerLink='/events'>Tournaments</a></p>
+        <p><a routerLink='/events'>Event Manager</a></p>
     </div>
     <p *ngIf="!loggedIn"><a routerLink='/login'>Log In</a></p>
     <p><a routerLink='/tiers'>Tier Descriptions</a></p>
+    <p><a routerLink='/matches'>Match History</a></p>
 </div>
