Added footer component, fixed some log in bugs, allowed match deleting

--- a/src/components/add-player/add-player.template.html
+++ b/src/components/add-player/add-player.template.html
@@ -1,5 +1,5 @@
 <form (submit)='addPlayer()'>
     <h3>Register New Player</h3>
-    <label for='tag'>Tag:</label> <input type='text' name='tag' [(ngModel)]='tag' />
-    <input type='submit' value='Add' />
+    <label for='tag'>Tag:</label> <input type='text' name='tag' id="tag" [(ngModel)]='tag' />
+    <input type='submit' value='Add' [disabled]="submitting" />
 </form>
