--- a/src/components/view-matches/view-matches.style.scss
+++ b/src/components/view-matches/view-matches.style.scss
@@ -33,4 +33,11 @@
     grid-area: event;
     text-align: center;
   }
+  button{
+    color: #222222;
+    &:hover{
+      cursor: pointer;
+      color: #CC3333;
+    }
+  }
 }
