--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -1,6 +1,11 @@
 .home{
     width: 700px;
     margin: 0 auto;
+    img{
+        width: 500px;
+        margin: 0 auto;
+        display: block;
+    }
     h3{
         margin: 5px 0px;
         text-align: left;
