--- a/src/components/app/app.styles.css
+++ b/src/components/app/app.styles.css
@@ -8,16 +8,22 @@ h1, h3 {
 
 html body {
   font-family: Helvetica, sans-serif;
-  background-color: #333;
-  color: #CCC; }
+  background-color: #0193FC;
+  color: #333; }
 
 a {
-  color: #CC3333;
+  color: #FFE033;
   padding: 0 3px;
   text-decoration: none; }
   a:hover {
-    color: white;
-    background-color: #CC3333;
+    color: #333;
+    background-color: #FFE033;
     cursor: pointer; }
+  a[href^="http"], a[data-ext] {
+    padding-right: 20px;
+    background-image: url("/assets/images/external_link.svg");
+    background-size: 1em 1em;
+    background-repeat: no-repeat;
+    background-position: 100% 0; }
 
 /*# sourceMappingURL=app.styles.css.map */
