--- a/src/components/home/home.template.html
+++ b/src/components/home/home.template.html
@@ -1,10 +1,10 @@
 <div class="home">
-    <h1>Brighton Stock Community Hub</h1>
+    <img [src]="header_src" />
     <h3>Links:</h3>
     <ul>
         <li><a routerLink="/league">League</a></li>
-        <li><a href="/stats">Stats</a></li>
-        <li><a href="/fb">Facebook</a></li>
+        <li><a href="/stats" data-ext>Stats</a></li>
+        <li><a href="/fb" data-ext>Facebook</a></li>
     </ul>
 
 
