--- a/src/components/view-matches/view-matches.style.css
+++ b/src/components/view-matches/view-matches.style.css
@@ -11,7 +11,7 @@
     padding: 5px; }
   .match .score {
     font-size: 1.2em;
-    color: #CC3333;
+    color: #FFE033;
     padding: 0 5px; }
   .match .dash {
     grid-area: dash;
