Added full list view, changed how main league table is displayed

--- a/src/components/event-manager/event-manager.style.scss
+++ b/src/components/event-manager/event-manager.style.scss
@@ -12,7 +12,7 @@ ul{
   }
 }
 .selected{
-  border: 1px solid #CC3333;
+  border: 1px solid #FFE033;
   padding: 5px;
   :not(&){
     padding: 6px;
