--- a/src/components/log-in/log-in.style.scss
+++ b/src/components/log-in/log-in.style.scss
@@ -1,6 +1,10 @@
 form, div{
-  text-align: center;
+    text-align: center;
 }
-div{
-  color: red;
+.already{
+    margin-top: 30px;
+    font-size: 20px;
+}
+.warn{
+    color: #FF9966;
 }
