fixed a bunch of bugs and bad formatting - still a horrible code base but slightly better and actually works consistently now

--- a/src/components/log-in/log-in.template.html
+++ b/src/components/log-in/log-in.template.html
@@ -6,7 +6,7 @@
     <h3>Log In to Report Matches, etc.</h3>
     <p>
         <label for="password">Password:</label>
-        <input type="password" name="password" [(ngModel)]="password" />
+        <input type="password" id="password" name="password" [(ngModel)]="password" />
         <input type="submit" value="Log In" />
     </p>
     <p>
