--- a/src/components/match-report/match-report.template.html
+++ b/src/components/match-report/match-report.template.html
@@ -1,6 +1,8 @@
 <div *ngIf="loading === false && loggedIn === true" class='wrapper'>
     <h3>Reporting for event {{event}}</h3>
 
+    <ps-player [player]="player1" class='player1'></ps-player>
+
     <div class="player1Score playerscore">
         <button (click)="player1Score = 0" [ngClass]="player1Score === 0 ? 'selected' : ''">0</button>
         <button (click)="player1Score = 1" [ngClass]="player1Score === 1 ? 'selected' : ''">1</button>
@@ -8,7 +10,7 @@
         <button (click)="player1Score = 3" [ngClass]="player1Score === 3 ? 'selected' : ''">3</button>
     </div>
 
-    <player [player]="player1" class='player1'></player>
+    <ps-player [player]="player2" class='player2'></ps-player>
 
     <div class="player2Score playerscore">
         <button (click)="player2Score = 0" [ngClass]="player2Score === 0 ? 'selected' : ''">0</button>
@@ -17,7 +19,6 @@
         <button (click)="player2Score = 3" [ngClass]="player2Score === 3 ? 'selected' : ''">3</button>
     </div>
 
-    <player [player]="player2" class='player2'></player>
     <button class="submit" *ngIf="too_many === false" (click)="submit()" [disabled]="submitting">Submit</button>
     <p *ngIf="too_many === true" class="message">Those players have played each other too many times!</p>
     <p><a routerLink="/players">Cancel</a></p>
