--- a/src/components/player-list/player-list.style.css
+++ b/src/components/player-list/player-list.style.css
@@ -24,4 +24,8 @@
       grid-area: losses;
       text-align: right; }
 
+h3.error {
+  color: #FFC;
+  text-align: center; }
+
 /*# sourceMappingURL=player-list.style.css.map */
