--- a/src/components/app/app.template.html
+++ b/src/components/app/app.template.html
@@ -1,2 +1,2 @@
 <router-outlet *ngIf="ready"></router-outlet>
-<footer *ngIf="currentRoute !== ''"></footer>
+<ps-footer *ngIf="currentRoute !== ''"></ps-footer>
