--- a/src/components/home/home.template.html
+++ b/src/components/home/home.template.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <img [src]="header_src" />
+    <img [src]="header_src"/>
     <h3>Links:</h3>
     <ul>
         <li><a routerLink="/league">League</a></li>
@@ -18,5 +18,6 @@
     </ul>
 
     <p>We meet every other Sunday at The Globe Inn in Brighton.</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2520.566660591702!2d-0.14324199999999995!3d50.82066700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875850bf5829973%3A0x540844b321bd56c4!2sThe+Globe!5e0!3m2!1sen!2suk!4v1502872479952" width="700" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2520.566660591702!2d-0.14324199999999995!3d50.82066700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875850bf5829973%3A0x540844b321bd56c4!2sThe+Globe!5e0!3m2!1sen!2suk!4v1502872479952"
+            width="700" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
